# SDL2_cmake_windows_setup

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  setup.bat
src/: main.cpp
